Lep 226 tighten api validation new (#206)
* LEP-226 Publish version 7 API

* Set additionalProperties: false for V7 objects

* fix additionalProperties for response

* remove additionalProperties for response objects

* update v7 docs

* Add specs

* support housing cost for '#/cash_transactions/outgoings/1/payments/0'

* Update response_support_methods.rb

* add spec

* fix housing_cost_type for v6

* fix sonarcloud suggestions

* refactor swagger docs

* fix version in response

* fix sonarcloud suggestions

* fix sonarcloud suggestions

* Update response_support_methods.rb

* Update response_support_methods.rb

* Update application_controller.rb

* remove duplicate V7 specs

* change cash_transactions > outgoings schema to "oneOf"

* duplicate spec reasoning

* fix sonarcloud suggestions

* update cash_transactions spec as per new schema

* Revert "update cash_transactions spec as per new schema"

This reverts commit 84af7f2338c12d4d5ab0859c6d074ff3e937e140.

* Update assessments_controller_spec.rb

* Update swagger_docs.rb

* update new cash_transactions > outgoings schema to old schema"

* Update full_assessment_spec.rb

* Update assessments_controller_spec.rb

* remove unnecessary if-else
