# swagger/v7/swagger.yaml
@@ -1,17 +1,17 @@
 ---
 openapi: 3.0.1
 info:
-  title: API v6
+  title: API v7
   description: |-
     # Check financial eligibility for legal aid.
 
     ## Usage:
-      - Calculate eligibility by POSTing a payload to `/v6/assessments`
+      - Calculate eligibility by POSTing a payload to `/v7/assessments`
       - Add assessment components, such as applicant, capitals and properties in the payload
   contact:
     name: Github repository
     url: https://github.com/ministryofjustice/cfe-civil
-  version: v6
+  version: v7
 components:
   schemas:
     currency:
@@ -108,6 +108,7 @@ components:
           - eligible
           - ineligible
           - contribution_required
+      additionalProperties: false
     PropertyResult:
       type: object
       additionalProperties: false
@@ -562,6 +563,8 @@ components:
                     date:
                       type: string
                       format: date
+                  additionalProperties: false
+      additionalProperties: false
     Dependant:
       type: object
       required:
@@ -589,6 +592,7 @@ components:
         assets_value:
           "$ref": "#/components/schemas/currency"
           description: Dependant's total assets value
+      additionalProperties: false
     IrregularIncomePayments:
       type: array
       minItems: 0
@@ -619,6 +623,7 @@ components:
             example: monthly
           amount:
             "$ref": "#/components/schemas/currency"
+        additionalProperties: false
     OtherIncomes:
       type: array
       description: One or more other regular income payments categorized by source
@@ -666,6 +671,8 @@ components:
                   format: uuid
                   description: Client identifier for payment received
                   example: '05459c0f-a620-4743-9f0c-b3daa93e'
+              additionalProperties: false
+        additionalProperties: false
     ProceedingTypes:
       type: array
       minItems: 1
@@ -737,6 +744,7 @@ components:
             example: A
             description: A CCMS client_involvement_type. This is not used in the calculation,
               so can be set to any valid value.
+        additionalProperties: false
     Property:
       type: object
       required:
@@ -764,6 +772,7 @@ components:
         subject_matter_of_dispute:
           type: boolean
           description: Property is the subject of a dispute. Defaults to false
+      additionalProperties: false
     RegularTransaction:
       type: object
       description: regular transaction detail
@@ -949,6 +958,7 @@ components:
                 properties:
                   multi_benefit:
                     type: boolean
+                additionalProperties: false
     Vehicle:
       type: object
       required:
@@ -971,6 +981,7 @@ components:
         subject_matter_of_dispute:
           type: boolean
           description: Whether this vehicle is the subject of a dispute
+      additionalProperties: false
     ExplicitRemarks:
       type: array
       description: One or more remarks by category
@@ -993,6 +1004,7 @@ components:
             description: One or more remarks for that category
             items:
               type: string
+        additionalProperties: false
     CapitalResult:
       type: object
       properties:
@@ -1071,6 +1083,8 @@ components:
                 format: decimal
               result:
                 type: string
+            additionalProperties: false
+      additionalProperties: false
     DisposableIncome:
       type: object
       properties:
@@ -1176,8 +1190,10 @@ components:
                 format: decimal
               result:
                 type: string
+            additionalProperties: false
+      additionalProperties: false
 paths:
-  "/v6/assessments":
+  "/v7/assessments":
     post:
       summary: create
       tags:
@@ -1523,7 +1539,7 @@ paths:
                   version:
                     type: string
                     enum:
-                    - '6'
+                    - '7'
                     description: Version of the API used in the request
                   success:
                     type: boolean
@@ -1539,6 +1555,7 @@ paths:
               - assessment
               - applicant
               - proceeding_types
+              additionalProperties: false
               properties:
                 assessment:
                   "$ref": "#/components/schemas/Assessment"
@@ -1579,6 +1596,7 @@ paths:
                   type: object
                   required: []
                   description: A main home and additional properties
+                  additionalProperties: false
                   properties:
                     main_home:
                       "$ref": "#/components/schemas/Property"
@@ -1671,6 +1689,7 @@ paths:
                       date_of_purchase: '2017-01-23'
                       in_regular_use: true
                       subject_matter_of_dispute: false
+                  additionalProperties: false
                   properties:
                     partner:
                       type: object
@@ -1678,6 +1697,7 @@ paths:
                       required:
                       - date_of_birth
                       - employed
+                      additionalProperties: false
                       properties:
                         date_of_birth:
                           type: string
@@ -1702,6 +1722,7 @@ paths:
                       items:
                         type: object
                         description: Employment income detail
+                        additionalProperties: false
                         properties:
                           name:
                             type: string
